--- a/nb/01_datapreprocessing.ipynb
+++ b/nb/01_datapreprocessing.ipynb
@@ -2,25 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import polars as pl"
+    "import polars as pl\n",
+    "import numpy as np\n",
+    "\n",
+    "data_path = \"data\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_path = \"data\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,14 +45,60 @@
     "        ], variable_name=\"state_id\", value_name=\"snap\")\n",
     "    .with_columns(\n",
     "        pl.col(\"date\").str.strptime(pl.Date, \"%Y-%m-%d\"),\n",
-    "        pl.col(\"state_id\").str.slice(-2, )\n",
+    "        pl.col(\"state_id\").str.slice(-2, ),\n",
+    "        pl.concat_str(pl.col(\"event_name_1\").str.replace(\"\\s\", \"_\"), pl.col(\"event_type_1\").str.replace(\"\\s\", \"_\"), separator=\"/\").alias(\"event_1\"),\n",
+    "        pl.concat_str(pl.col(\"event_name_2\").str.replace(\"\\s\", \"_\"), pl.col(\"event_type_2\").str.replace(\"\\s\", \"_\"), separator=\" / \").alias(\"event_2\")\n",
     "    )\n",
+    "    .with_columns(\n",
+    "        pl.concat_str(pl.col(\"event_1\"), pl.col(\"event_2\"), separator=\" \").fill_null(\"\").alias(\"event\")\n",
+    "    )\n",
+    "    .drop([\"event_name_1\", \"event_type_1\", \"event_name_2\", \"event_type_2\", \"event_1\", \"event_2\"])\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr > th,\n",
+       ".dataframe > tbody > tr > td {\n",
+       "  text-align: right;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 10)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>date</th><th>wm_yr_wk</th><th>weekday</th><th>wday</th><th>month</th><th>year</th><th>d</th><th>state_id</th><th>snap</th><th>event</th></tr><tr><td>date</td><td>i64</td><td>str</td><td>i64</td><td>i64</td><td>i64</td><td>str</td><td>str</td><td>i64</td><td>str</td></tr></thead><tbody><tr><td>2011-01-29</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>&quot;d_1&quot;</td><td>&quot;CA&quot;</td><td>0</td><td>&quot;&quot;</td></tr><tr><td>2011-01-30</td><td>11101</td><td>&quot;Sunday&quot;</td><td>2</td><td>1</td><td>2011</td><td>&quot;d_2&quot;</td><td>&quot;CA&quot;</td><td>0</td><td>&quot;&quot;</td></tr><tr><td>2011-01-31</td><td>11101</td><td>&quot;Monday&quot;</td><td>3</td><td>1</td><td>2011</td><td>&quot;d_3&quot;</td><td>&quot;CA&quot;</td><td>0</td><td>&quot;&quot;</td></tr><tr><td>2011-02-01</td><td>11101</td><td>&quot;Tuesday&quot;</td><td>4</td><td>2</td><td>2011</td><td>&quot;d_4&quot;</td><td>&quot;CA&quot;</td><td>1</td><td>&quot;&quot;</td></tr><tr><td>2011-02-02</td><td>11101</td><td>&quot;Wednesday&quot;</td><td>5</td><td>2</td><td>2011</td><td>&quot;d_5&quot;</td><td>&quot;CA&quot;</td><td>1</td><td>&quot;&quot;</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 10)\n",
+       "┌────────────┬──────────┬───────────┬──────┬───┬─────┬──────────┬──────┬───────┐\n",
+       "│ date       ┆ wm_yr_wk ┆ weekday   ┆ wday ┆ … ┆ d   ┆ state_id ┆ snap ┆ event │\n",
+       "│ ---        ┆ ---      ┆ ---       ┆ ---  ┆   ┆ --- ┆ ---      ┆ ---  ┆ ---   │\n",
+       "│ date       ┆ i64      ┆ str       ┆ i64  ┆   ┆ str ┆ str      ┆ i64  ┆ str   │\n",
+       "╞════════════╪══════════╪═══════════╪══════╪═══╪═════╪══════════╪══════╪═══════╡\n",
+       "│ 2011-01-29 ┆ 11101    ┆ Saturday  ┆ 1    ┆ … ┆ d_1 ┆ CA       ┆ 0    ┆       │\n",
+       "│ 2011-01-30 ┆ 11101    ┆ Sunday    ┆ 2    ┆ … ┆ d_2 ┆ CA       ┆ 0    ┆       │\n",
+       "│ 2011-01-31 ┆ 11101    ┆ Monday    ┆ 3    ┆ … ┆ d_3 ┆ CA       ┆ 0    ┆       │\n",
+       "│ 2011-02-01 ┆ 11101    ┆ Tuesday   ┆ 4    ┆ … ┆ d_4 ┆ CA       ┆ 1    ┆       │\n",
+       "│ 2011-02-02 ┆ 11101    ┆ Wednesday ┆ 5    ┆ … ┆ d_5 ┆ CA       ┆ 1    ┆       │\n",
+       "└────────────┴──────────┴───────────┴──────┴───┴─────┴──────────┴──────┴───────┘"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calendar.head().collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -98,35 +138,29 @@
        "  text-align: right;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 21)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>id</th><th>item_id</th><th>dept_id</th><th>cat_id</th><th>store_id</th><th>state_id</th><th>d</th><th>sales</th><th>days_since_start</th><th>date</th><th>wm_yr_wk</th><th>weekday</th><th>wday</th><th>month</th><th>year</th><th>event_name_1</th><th>event_type_1</th><th>event_name_2</th><th>event_type_2</th><th>snap</th><th>sell_price</th></tr><tr><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>i64</td><td>i64</td><td>date</td><td>i64</td><td>str</td><td>i64</td><td>i64</td><td>i64</td><td>str</td><td>str</td><td>str</td><td>str</td><td>i64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;HOBBIES_1_008_…</td><td>&quot;HOBBIES_1_008&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>12</td><td>1</td><td>2011-01-29</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>null</td><td>null</td><td>null</td><td>null</td><td>0</td><td>0.46</td></tr><tr><td>&quot;HOBBIES_1_009_…</td><td>&quot;HOBBIES_1_009&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>2</td><td>1</td><td>2011-01-29</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>null</td><td>null</td><td>null</td><td>null</td><td>0</td><td>1.56</td></tr><tr><td>&quot;HOBBIES_1_010_…</td><td>&quot;HOBBIES_1_010&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>0</td><td>1</td><td>2011-01-29</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>null</td><td>null</td><td>null</td><td>null</td><td>0</td><td>3.17</td></tr><tr><td>&quot;HOBBIES_1_012_…</td><td>&quot;HOBBIES_1_012&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>0</td><td>1</td><td>2011-01-29</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>null</td><td>null</td><td>null</td><td>null</td><td>0</td><td>5.98</td></tr><tr><td>&quot;HOBBIES_1_015_…</td><td>&quot;HOBBIES_1_015&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>4</td><td>1</td><td>2011-01-29</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>null</td><td>null</td><td>null</td><td>null</td><td>0</td><td>0.7</td></tr></tbody></table></div>"
+       "<small>shape: (5, 18)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>id</th><th>item_id</th><th>dept_id</th><th>cat_id</th><th>store_id</th><th>state_id</th><th>d</th><th>sales</th><th>days_since_start</th><th>date</th><th>wm_yr_wk</th><th>weekday</th><th>wday</th><th>month</th><th>year</th><th>snap</th><th>event</th><th>sell_price</th></tr><tr><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>i64</td><td>i64</td><td>date</td><td>i64</td><td>str</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>str</td><td>f64</td></tr></thead><tbody><tr><td>&quot;HOBBIES_1_008_…</td><td>&quot;HOBBIES_1_008&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>12</td><td>1</td><td>2011-01-29</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>0</td><td>&quot;&quot;</td><td>0.46</td></tr><tr><td>&quot;HOBBIES_1_009_…</td><td>&quot;HOBBIES_1_009&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>2</td><td>1</td><td>2011-01-29</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>0</td><td>&quot;&quot;</td><td>1.56</td></tr><tr><td>&quot;HOBBIES_1_010_…</td><td>&quot;HOBBIES_1_010&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>0</td><td>1</td><td>2011-01-29</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>0</td><td>&quot;&quot;</td><td>3.17</td></tr><tr><td>&quot;HOBBIES_1_012_…</td><td>&quot;HOBBIES_1_012&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>0</td><td>1</td><td>2011-01-29</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>0</td><td>&quot;&quot;</td><td>5.98</td></tr><tr><td>&quot;HOBBIES_1_015_…</td><td>&quot;HOBBIES_1_015&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>4</td><td>1</td><td>2011-01-29</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>0</td><td>&quot;&quot;</td><td>0.7</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (5, 21)\n",
-       "┌─────────────┬────────────┬───────────┬─────────┬───┬────────────┬────────────┬──────┬────────────┐\n",
-       "│ id          ┆ item_id    ┆ dept_id   ┆ cat_id  ┆ … ┆ event_name ┆ event_type ┆ snap ┆ sell_price │\n",
-       "│ ---         ┆ ---        ┆ ---       ┆ ---     ┆   ┆ _2         ┆ _2         ┆ ---  ┆ ---        │\n",
-       "│ str         ┆ str        ┆ str       ┆ str     ┆   ┆ ---        ┆ ---        ┆ i64  ┆ f64        │\n",
-       "│             ┆            ┆           ┆         ┆   ┆ str        ┆ str        ┆      ┆            │\n",
-       "╞═════════════╪════════════╪═══════════╪═════════╪═══╪════════════╪════════════╪══════╪════════════╡\n",
-       "│ HOBBIES_1_0 ┆ HOBBIES_1_ ┆ HOBBIES_1 ┆ HOBBIES ┆ … ┆ null       ┆ null       ┆ 0    ┆ 0.46       │\n",
-       "│ 08_CA_1_eva ┆ 008        ┆           ┆         ┆   ┆            ┆            ┆      ┆            │\n",
-       "│ luation     ┆            ┆           ┆         ┆   ┆            ┆            ┆      ┆            │\n",
-       "│ HOBBIES_1_0 ┆ HOBBIES_1_ ┆ HOBBIES_1 ┆ HOBBIES ┆ … ┆ null       ┆ null       ┆ 0    ┆ 1.56       │\n",
-       "│ 09_CA_1_eva ┆ 009        ┆           ┆         ┆   ┆            ┆            ┆      ┆            │\n",
-       "│ luation     ┆            ┆           ┆         ┆   ┆            ┆            ┆      ┆            │\n",
-       "│ HOBBIES_1_0 ┆ HOBBIES_1_ ┆ HOBBIES_1 ┆ HOBBIES ┆ … ┆ null       ┆ null       ┆ 0    ┆ 3.17       │\n",
-       "│ 10_CA_1_eva ┆ 010        ┆           ┆         ┆   ┆            ┆            ┆      ┆            │\n",
-       "│ luation     ┆            ┆           ┆         ┆   ┆            ┆            ┆      ┆            │\n",
-       "│ HOBBIES_1_0 ┆ HOBBIES_1_ ┆ HOBBIES_1 ┆ HOBBIES ┆ … ┆ null       ┆ null       ┆ 0    ┆ 5.98       │\n",
-       "│ 12_CA_1_eva ┆ 012        ┆           ┆         ┆   ┆            ┆            ┆      ┆            │\n",
-       "│ luation     ┆            ┆           ┆         ┆   ┆            ┆            ┆      ┆            │\n",
-       "│ HOBBIES_1_0 ┆ HOBBIES_1_ ┆ HOBBIES_1 ┆ HOBBIES ┆ … ┆ null       ┆ null       ┆ 0    ┆ 0.7        │\n",
-       "│ 15_CA_1_eva ┆ 015        ┆           ┆         ┆   ┆            ┆            ┆      ┆            │\n",
-       "│ luation     ┆            ┆           ┆         ┆   ┆            ┆            ┆      ┆            │\n",
-       "└─────────────┴────────────┴───────────┴─────────┴───┴────────────┴────────────┴──────┴────────────┘"
+       "shape: (5, 18)\n",
+       "┌─────────────────────┬───────────────┬───────────┬─────────┬───┬──────┬──────┬───────┬────────────┐\n",
+       "│ id                  ┆ item_id       ┆ dept_id   ┆ cat_id  ┆ … ┆ year ┆ snap ┆ event ┆ sell_price │\n",
+       "│ ---                 ┆ ---           ┆ ---       ┆ ---     ┆   ┆ ---  ┆ ---  ┆ ---   ┆ ---        │\n",
+       "│ str                 ┆ str           ┆ str       ┆ str     ┆   ┆ i64  ┆ i64  ┆ str   ┆ f64        │\n",
+       "╞═════════════════════╪═══════════════╪═══════════╪═════════╪═══╪══════╪══════╪═══════╪════════════╡\n",
+       "│ HOBBIES_1_008_CA_1_ ┆ HOBBIES_1_008 ┆ HOBBIES_1 ┆ HOBBIES ┆ … ┆ 2011 ┆ 0    ┆       ┆ 0.46       │\n",
+       "│ evaluation          ┆               ┆           ┆         ┆   ┆      ┆      ┆       ┆            │\n",
+       "│ HOBBIES_1_009_CA_1_ ┆ HOBBIES_1_009 ┆ HOBBIES_1 ┆ HOBBIES ┆ … ┆ 2011 ┆ 0    ┆       ┆ 1.56       │\n",
+       "│ evaluation          ┆               ┆           ┆         ┆   ┆      ┆      ┆       ┆            │\n",
+       "│ HOBBIES_1_010_CA_1_ ┆ HOBBIES_1_010 ┆ HOBBIES_1 ┆ HOBBIES ┆ … ┆ 2011 ┆ 0    ┆       ┆ 3.17       │\n",
+       "│ evaluation          ┆               ┆           ┆         ┆   ┆      ┆      ┆       ┆            │\n",
+       "│ HOBBIES_1_012_CA_1_ ┆ HOBBIES_1_012 ┆ HOBBIES_1 ┆ HOBBIES ┆ … ┆ 2011 ┆ 0    ┆       ┆ 5.98       │\n",
+       "│ evaluation          ┆               ┆           ┆         ┆   ┆      ┆      ┆       ┆            │\n",
+       "│ HOBBIES_1_015_CA_1_ ┆ HOBBIES_1_015 ┆ HOBBIES_1 ┆ HOBBIES ┆ … ┆ 2011 ┆ 0    ┆       ┆ 0.7        │\n",
+       "│ evaluation          ┆               ┆           ┆         ┆   ┆      ┆      ┆       ┆            │\n",
+       "└─────────────────────┴───────────────┴───────────┴─────────┴───┴──────┴──────┴───────┴────────────┘"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,25 +180,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "(\n",
     "    df\n",
     "    .select([\n",
     "        \"id\", \"item_id\", \"dept_id\", \"cat_id\", \"store_id\", \"state_id\", \n",
-    "        \"sales\", \"date\", \"event_name_1\", \"event_type_1\", \"event_name_2\",\n",
-    "        \"event_type_2\", \"snap\", \"sell_price\"\n",
+    "        \"sales\", \"date\", \"event\", \"snap\", \"sell_price\"\n",
     "    ])\n",
     "    .write_parquet(\"../data/reduced_table.parquet\")\n",
     ")"
