--- a/nb/01_datapreprocessing.ipynb
+++ b/nb/01_datapreprocessing.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
     "        \"event_name_1\", \"event_type_1\", \"event_name_2\", \"event_type_2\"\n",
     "        ], variable_name=\"state_id\", value_name=\"snap\")\n",
     "    .with_columns(\n",
-    "        pl.col(\"date\").str.strptime(pl.Date, \"%Y%m%d\"),\n",
+    "        pl.col(\"date\").str.strptime(pl.Date, \"%Y-%m-%d\"),\n",
     "        pl.col(\"state_id\").str.slice(-2, )\n",
     "    )\n",
     ")"
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,18 +80,13 @@
     "    # NOTE: if the price is not reported in the prices table this filters automatically the\n",
     "    #       days without listings in the beginning\n",
     "    .join(prices, on=[\"store_id\", \"item_id\", \"wm_yr_wk\"])\n",
-    "    .select([\n",
-    "        \"id\", \"item_id\", \"dept_id\", \"cat_id\", \"store_id\", \"state_id\", \n",
-    "        \"sales\", \"date\", \"event_name_1\", \"event_type_1\", \"event_name_2\",\n",
-    "        \"event_type_2\", \"snap\", \"sell_price\"\n",
-    "    ])\n",
     "    .collect()\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +98,7 @@
        "  text-align: right;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 21)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>id</th><th>item_id</th><th>dept_id</th><th>cat_id</th><th>store_id</th><th>state_id</th><th>d</th><th>sales</th><th>days_since_start</th><th>date</th><th>wm_yr_wk</th><th>weekday</th><th>wday</th><th>month</th><th>year</th><th>event_name_1</th><th>event_type_1</th><th>event_name_2</th><th>event_type_2</th><th>snap</th><th>sell_price</th></tr><tr><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>i64</td><td>i64</td><td>str</td><td>i64</td><td>str</td><td>i64</td><td>i64</td><td>i64</td><td>str</td><td>str</td><td>str</td><td>str</td><td>i64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;HOBBIES_1_008_…</td><td>&quot;HOBBIES_1_008&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>12</td><td>1</td><td>&quot;2011-01-29&quot;</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>null</td><td>null</td><td>null</td><td>null</td><td>0</td><td>0.46</td></tr><tr><td>&quot;HOBBIES_1_009_…</td><td>&quot;HOBBIES_1_009&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>2</td><td>1</td><td>&quot;2011-01-29&quot;</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>null</td><td>null</td><td>null</td><td>null</td><td>0</td><td>1.56</td></tr><tr><td>&quot;HOBBIES_1_010_…</td><td>&quot;HOBBIES_1_010&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>0</td><td>1</td><td>&quot;2011-01-29&quot;</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>null</td><td>null</td><td>null</td><td>null</td><td>0</td><td>3.17</td></tr><tr><td>&quot;HOBBIES_1_012_…</td><td>&quot;HOBBIES_1_012&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>0</td><td>1</td><td>&quot;2011-01-29&quot;</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>null</td><td>null</td><td>null</td><td>null</td><td>0</td><td>5.98</td></tr><tr><td>&quot;HOBBIES_1_015_…</td><td>&quot;HOBBIES_1_015&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>4</td><td>1</td><td>&quot;2011-01-29&quot;</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>null</td><td>null</td><td>null</td><td>null</td><td>0</td><td>0.7</td></tr></tbody></table></div>"
+       "<small>shape: (5, 21)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>id</th><th>item_id</th><th>dept_id</th><th>cat_id</th><th>store_id</th><th>state_id</th><th>d</th><th>sales</th><th>days_since_start</th><th>date</th><th>wm_yr_wk</th><th>weekday</th><th>wday</th><th>month</th><th>year</th><th>event_name_1</th><th>event_type_1</th><th>event_name_2</th><th>event_type_2</th><th>snap</th><th>sell_price</th></tr><tr><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>i64</td><td>i64</td><td>date</td><td>i64</td><td>str</td><td>i64</td><td>i64</td><td>i64</td><td>str</td><td>str</td><td>str</td><td>str</td><td>i64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;HOBBIES_1_008_…</td><td>&quot;HOBBIES_1_008&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>12</td><td>1</td><td>2011-01-29</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>null</td><td>null</td><td>null</td><td>null</td><td>0</td><td>0.46</td></tr><tr><td>&quot;HOBBIES_1_009_…</td><td>&quot;HOBBIES_1_009&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>2</td><td>1</td><td>2011-01-29</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>null</td><td>null</td><td>null</td><td>null</td><td>0</td><td>1.56</td></tr><tr><td>&quot;HOBBIES_1_010_…</td><td>&quot;HOBBIES_1_010&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>0</td><td>1</td><td>2011-01-29</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>null</td><td>null</td><td>null</td><td>null</td><td>0</td><td>3.17</td></tr><tr><td>&quot;HOBBIES_1_012_…</td><td>&quot;HOBBIES_1_012&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>0</td><td>1</td><td>2011-01-29</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>null</td><td>null</td><td>null</td><td>null</td><td>0</td><td>5.98</td></tr><tr><td>&quot;HOBBIES_1_015_…</td><td>&quot;HOBBIES_1_015&quot;</td><td>&quot;HOBBIES_1&quot;</td><td>&quot;HOBBIES&quot;</td><td>&quot;CA_1&quot;</td><td>&quot;CA&quot;</td><td>&quot;d_1&quot;</td><td>4</td><td>1</td><td>2011-01-29</td><td>11101</td><td>&quot;Saturday&quot;</td><td>1</td><td>1</td><td>2011</td><td>null</td><td>null</td><td>null</td><td>null</td><td>0</td><td>0.7</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (5, 21)\n",
@@ -131,7 +126,7 @@
        "└─────────────┴────────────┴───────────┴─────────┴───┴────────────┴────────────┴──────┴────────────┘"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,11 +137,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.write_parquet(\"../data/full_table.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    df\n",
+    "    .select([\n",
+    "        \"id\", \"item_id\", \"dept_id\", \"cat_id\", \"store_id\", \"state_id\", \n",
+    "        \"sales\", \"date\", \"event_name_1\", \"event_type_1\", \"event_name_2\",\n",
+    "        \"event_type_2\", \"snap\", \"sell_price\"\n",
+    "    ])\n",
+    "    .write_parquet(\"../data/reduced_table.parquet\")\n",
+    ")"
    ]
   },
   {
@@ -173,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
